Se agregan opciones de calificacion para uso de herramienta y requisitos de servicio. Y corrección de un warning en detalle de incidentes
En la calificación de herramienta de estimación y requisitos de servicio
de los req. de apertura . Se agregan 3 checbox Sin herramienta de
estimación , PPM mal catálogado y Estimación no aprobada con su
funcionalidad correspondiente. Ademas se corrige un warning en los
detalles de incidentes , no se cargaba de inicio el arreglo de los
requerimientos solicitados.

--- a/TableroSLAs/IncidentesDetalleNS.html
+++ b/TableroSLAs/IncidentesDetalleNS.html
@@ -35,10 +35,10 @@
 </div>
 <!-- BEGIN Record mc_info_incidentesSearch -->
 <form id="mc_info_incidentesSearch" method="post" name="{HTMLFormName}" action="{Action}">
-  <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
+  <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
     <tr>
       <td valign="top">
-        <table class="Header" border="0" cellspacing="0" cellpadding="0">
+        <table class="Header" cellspacing="0" cellpadding="0" border="0">
           <tr>
             <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
             <td class="th"><strong>Filtro</strong></td> 
@@ -80,7 +80,7 @@
  
           <tr class="Bottom">
             <td style="TEXT-ALIGN: right" colspan="8">
-              <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_info_incidentesSearchButton_DoSearch" class="Button" value="Buscar" alt="Search" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
+              <!-- BEGIN Button Button_DoSearch --><input type="submit" id="mc_info_incidentesSearchButton_DoSearch" class="Button" alt="Search" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
           </tr>
         </table>
       </td>
@@ -89,10 +89,10 @@
 </form>
 <!-- END Record mc_info_incidentesSearch -->
 <!-- BEGIN Grid mc_info_incidentes -->
-<table id="mc_info_incidentes" class="MainTable" border="0" cellspacing="0" cellpadding="0">
+<table id="mc_info_incidentes" class="MainTable" cellspacing="0" cellpadding="0" border="0">
   <tr>
     <td valign="top">
-      <table class="Header" border="0" cellspacing="0" cellpadding="0">
+      <table class="Header" cellspacing="0" cellpadding="0" border="0">
         <tr>
           <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
           <td class="th"><strong>Lista de incidentes niveles de servicio</strong></td> 
@@ -174,7 +174,7 @@
  <!-- END Panel Panel1 --><!-- END Row -->
         <tr class="NoRecords">
           <td colspan="9"><strong>Número de registros :</strong>&nbsp; {lblRegistros}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-            <!-- BEGIN ImageLink ImageLink1 --><a href="{ImageLink1}" id="mc_info_incidentesImageLink1_{mc_info_incidentes:rowNumber}"><img style="BORDER-RIGHT-WIDTH: 0px; WIDTH: 33px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; HEIGHT: 28px; BORDER-LEFT-WIDTH: 0px; border-image: none" alt="{ImageLink1}" src="Images/xls.jpg" width="203" height="202"></a><!-- END ImageLink ImageLink1 --></td>
+            <!-- BEGIN ImageLink ImageLink1 --><a href="{ImageLink1}" id="mc_info_incidentesImageLink1_{mc_info_incidentes:rowNumber}"><img style="BORDER-LEFT-WIDTH: 0px; HEIGHT: 28px; BORDER-RIGHT-WIDTH: 0px; WIDTH: 33px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; border-image: none" alt="{ImageLink1}" src="Images/xls.jpg" width="203" height="202"></a><!-- END ImageLink ImageLink1 --></td>
         </tr>
         <!-- BEGIN NoRecords -->
         <tr class="NoRecords">
