--- a/TableroSLAs/PPMCsCumpReqFunDetalle.html
+++ b/TableroSLAs/PPMCsCumpReqFunDetalle.html
@@ -319,11 +319,11 @@ jQuery(function ($) {
           </tr>
  
           <tr class="Controls">
-            <td colspan="2"><label for="mc_info_rs_cr_RFTienePonderacion" style="display: inline;">Los requisitos están ponderados </label><input type="checkbox" id="mc_info_rs_cr_RFTienePonderacion" value="1" name="{TienePonderacion_Name}" {TienePonderacion}><input type="hidden" id="mc_info_rs_cr_RFTotalRequisitos" value="{TotalRequisitos}" name="{TotalRequisitos_Name}"></td>
+            <td colspan="2"><label style="display: inline;" for="mc_info_rs_cr_RFTienePonderacion">Los requisitos están ponderados </label><input type="checkbox" id="mc_info_rs_cr_RFTienePonderacion" value="1" name="{TienePonderacion_Name}" {TienePonderacion}><input type="hidden" id="mc_info_rs_cr_RFTotalRequisitos" value="{TotalRequisitos}" name="{TotalRequisitos_Name}"></td>
           </tr>
  
           <tr class="Controls">
-            <td colspan="2"><label for="mc_info_rs_cr_RFTieneCalificacion" style="display: inline;">Los requisitos están calificados&nbsp;&nbsp;&nbsp;</label><input type="checkbox" id="mc_info_rs_cr_RFTieneCalificacion" value="1" name="{TieneCalificacion_Name}" {TieneCalificacion}>&nbsp;</td>
+            <td colspan="2"><label style="display: inline;" for="mc_info_rs_cr_RFTieneCalificacion">Los requisitos están calificados&nbsp;&nbsp;&nbsp;</label><input type="checkbox" id="mc_info_rs_cr_RFTieneCalificacion" value="1" name="{TieneCalificacion_Name}" {TieneCalificacion}>&nbsp;</td>
           </tr>
  
           <tr class="Controls">
@@ -340,11 +340,11 @@ jQuery(function ($) {
             <td class="th"><label for="mc_info_rs_cr_RFFechaSubida">Fecha de liberación</label></td> 
             <td><input type="text" onblur="muestraCheck()" id="mc_info_rs_cr_RFFechaSubida" maxlength="100" size="10" value="{FechaSubida}" name="{FechaSubida_Name}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
               <div id="ListaPDF">
-                <label for="mc_info_rs_cr_RFListaenPDF" style="display: inline;">Lista de requisitos en PDF </label><input type="checkbox" id="mc_info_rs_cr_RFListaenPDF" value="1" name="{ListaenPDF_Name}" {ListaenPDF}>
+                <label style="display: inline;" for="mc_info_rs_cr_RFListaenPDF">Lista de requisitos en PDF </label><input type="checkbox" id="mc_info_rs_cr_RFListaenPDF" value="1" name="{ListaenPDF_Name}" {ListaenPDF}>
               </div>
  
               <div id="ListaCAES">
-                <label for="mc_info_rs_cr_RFListaenCAES" style="display: inline;">Lista de requisitos en CAES</label><input type="checkbox" id="mc_info_rs_cr_RFListaenCAES" value="1" name="{ListaenCAES_Name}" {ListaenCAES}>
+                <label style="display: inline;" for="mc_info_rs_cr_RFListaenCAES">Lista de requisitos en CAES</label><input type="checkbox" id="mc_info_rs_cr_RFListaenCAES" value="1" name="{ListaenCAES_Name}" {ListaenCAES}>
               </div>
             </td>
           </tr>
