--- a/TableroSLAs/PPMCsCrCalCodDetalle.html
+++ b/TableroSLAs/PPMCsCrCalCodDetalle.html
@@ -105,7 +105,7 @@
  
                 <tr class="Controls">
                   <td class="th"><label for="mc_info_rs_CCObservaciones">Observaciones</label></td> 
-                  <td><textarea id="mc_info_rs_CCObservaciones" rows="3" cols="50" name="{Observaciones_Name}">{Observaciones}</textarea></td>
+                  <td><textarea id="mc_info_rs_CCObservaciones" rows="3" cols="50" name="{Observaciones_Name}">{Observaciones}</textarea>&nbsp; </td>
                 </tr>
  
                 <tr class="Bottom">
