--- a/TableroSLAs/TableroSLAs.html
+++ b/TableroSLAs/TableroSLAs.html
@@ -30,10 +30,10 @@
     <td>&nbsp; 
       <!-- BEGIN Record Grid2 -->
       <form id="Grid2" method="post" name="{HTMLFormName}" action="{Action}">
-        <table class="MainTable" border="0" cellspacing="0" cellpadding="0">
+        <table class="MainTable" cellspacing="0" cellpadding="0" border="0">
           <tr>
             <td valign="top">
-              <table class="Header" border="0" cellspacing="0" cellpadding="0">
+              <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Especificar datos</strong></td> 
@@ -72,7 +72,7 @@
  
                 <tr class="Bottom">
                   <td style="TEXT-ALIGN: right" colspan="7">
-                    <!-- BEGIN Button Button_DoSearch --><input type="submit" id="Grid2Button_DoSearch" class="Button" value="Buscar" alt="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
+                    <!-- BEGIN Button Button_DoSearch --><input type="submit" id="Grid2Button_DoSearch" class="Button" alt="Buscar" value="Buscar" name="{Button_Name}"><!-- END Button Button_DoSearch --></td>
                 </tr>
               </table>
             </td>
@@ -109,10 +109,10 @@
     <td colspan="2">&nbsp; 
       <!-- BEGIN Panel pnlTableroSLAs -->&nbsp; 
       <!-- BEGIN Grid grdTableroSLAs -->
-      <table id="pnlTableroSLAsgrdTableroSLAs" class="MainTable" border="0" cellspacing="0" cellpadding="0">
+      <table id="pnlTableroSLAsgrdTableroSLAs" class="MainTable" cellspacing="0" cellpadding="0" border="0">
         <tr>
           <td valign="top">
-            <table class="Header" border="0" cellspacing="0" cellpadding="0">
+            <table class="Header" cellspacing="0" cellpadding="0" border="0">
               <tr>
                 <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                 <td class="th"><strong>Niveles de servicio reportados por el CAPC</strong></td> 
@@ -256,10 +256,10 @@
     <td colspan="2">&nbsp; 
       <!-- BEGIN Grid grdTableroSLAsMG -->
       <div style="display:{iTableroSLAsCAPC_MG}">
-        <table id="grdTableroSLAsMG" class="MainTable" border="0" cellspacing="0" cellpadding="0" width="90%">
+        <table id="grdTableroSLAsMG" class="MainTable" cellspacing="0" cellpadding="0" width="90%" border="0">
           <tr>
             <td valign="top">
-              <table class="Header" border="0" cellspacing="0" cellpadding="0">
+              <table class="Header" cellspacing="0" cellpadding="0" border="0">
                 <tr>
                   <td class="HeaderLeft"><img alt="" src="Styles/Austere4/Images/Spacer.gif"></td> 
                   <td class="th"><strong>Niveles de servicio reportados por Modelo de Gobierno</strong></td> 
@@ -401,10 +401,10 @@
     <td colspan="2">&nbsp; 
       <!-- BEGIN Panel pnlSLAsCAPC -->
       <!-- BEGIN Grid grdSLAsCAPC -->
-      <table id="pnlSLAsCAPCgrdSLAsCAPC" class="MainTable" border="0" cellspacing="0" cellpadding="0">
+      <table id="pnlSLAsCAPCgrdSLAsCAPC" class="MainTable" cellspacing="0" cellpadding="0" border="0">
         <tr>
           <td valign="top">
-            <table class="Header" border="0" cellspacing="0" cellpadding="0">
+            <table class="Header" cellspacing="0" cellpadding="0" border="0">
               <tr>
                 <td class="HeaderLeft"><img alt="" src="Styles/{CCS_Style}/Images/Spacer.gif"></td> 
                 <td class="th"><strong>Niveles de servicio reportados por el CAPC</strong></td> 
