Modificación a retornos en botones update e insert
Se modifican los botones para que al enviar o recalcular el retorno sea
a la misma página y no al listado general

--- a/TableroSLAs/PPMCsCrbDetalle.html
+++ b/TableroSLAs/PPMCsCrbDetalle.html
@@ -218,7 +218,7 @@ function mtoMenor(daysDiff,diasHabiles,DiasPlaneados){
 
 function mtoMayor(daysDiff,diasHabiles,DiasPlaneados){
     // con el SDMA4 se aplican las mismas reglas de menores a los mayores
-    mtoMenor(daysDiff,diasHabiles,DiasPlaneados){
+    mtoMenor(daysDiff,diasHabiles,DiasPlaneados);//{
     /*
     var aDeductiva=0;
     if (DiasPlaneados>0){
